# sbitx-soapy

./: README.md  Sbitx CTRL  Sbitx-ini  dl1ycf-pihpsdr  install.sh  soapydriverinstall.txt  startpihpsdr.py
pihpsdr_files/: Makefile  gpio.props  protocols.props  sbitx.props  sliders.c  soapy_discovery.c
sbitx-core_mod/: alsamix_bands.ini  install-deskhpsdr.sh  mj_sbitx_core.c  sbitx_core.h  sbitx_ctrl  sbitx_ctrl.c  sbitx_gpio.c  sbitx_gpio.h  sbitx_ini_gui.py
soapy_sbitx_driver/src/: SBITXDevice.cpp  SBITXDevice.hpp
soapydriver_liquid/: CMakeLists.txt  README.md
soapydriver_liquid/src/: Register.cpp  SBITXDevice.cpp  SBITXDevice.hpp
